# sneks-2024

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-infra.txt  requirements-record.txt  requirements.txt  tox.ini
src/sneks/application/backend/: Dockerfile  main.py  requirements-scoring.txt  requirements.txt
src/sneks/application/backend/notifier/: __init__.py
src/sneks/application/backend/processor/: __init__.py  runner.py
src/sneks/application/backend/validator/: __init__.py
src/sneks/application/engine/config/: config.py  definition.py
src/sneks/application/engine/core/: board.py  cell.py
src/sneks/application/engine/engine/: cells.py  mover.py  registrar.py  runner.py  state.py
src/sneks/application/engine/gui/: graphics.py  poster.py  recorder.py
src/sneks/application/engine/interface/: snek.py
src/sneks/application/engine/template/: submission.py
src/sneks/application/engine/validator/: main.py  test_existance.py  test_functionality.py
src/sneks/backend/: main.py
src/sneks/backend/processor/: __init__.py  runner.py
src/sneks/backend/validator/: __init__.py
src/sneks/engine/config/: definition.py  instantiation.py
src/sneks/engine/core/: cell.py
src/sneks/engine/engine/: cells.py  mover.py  registrar.py  runner.py  state.py
src/sneks/engine/gui/: graphics.py  poster.py  recorder.py
src/sneks/engine/interface/: snek.py
src/sneks/engine/validator/: main.py  test_existance.py  test_functionality.py
src/sneks/infrastructure/: app.py
src/sneks/infrastructure/pipeline/: source.py  stack.py
src/sneks/infrastructure/processor/: lambdas.py  sneks_stack.py  stack.py  state_machine.py  static_site.py
src/sneks/submission/examples/: food_motivated.py  left_turner.py
src/sneks/submission/scripts/: __init__.py
src/sneks/submission/submission/snek/: submission.py
src/sneks2024/infrastructure/: app.py
src/sneks2024/infrastructure/application/: stack.py
src/sneks2024/infrastructure/pipeline/: stack.py
src/sneks2024/infrastructure/sneksinfra/: sneks_stack.py  static_site.py
src/sneks2024/logic/api/: router.py
src/sneks2024/logic/engine/config/: config.py
src/sneks2024/logic/engine/core/: board.py  cell.py  direction.py
src/sneks2024/logic/engine/engine/: mover.py  registrar.py  runner.py  state.py
src/sneks2024/logic/engine/gui/: graphics.py  poster.py  recorder.py
src/sneks2024/logic/engine/interface/: snek.py
src/sneks2024/logic/engine/template/: submission.py
src/sneks2024/logic/engine/validator/: main.py  test_existance.py  test_functionality.py
src/submission/scripts/: __init__.py
src/tests/: conftest.py
src/tests/application/engine/core/: test_cell.py
src/tests/engine/core/: test_cell.py
src/tests/infrastructure/pipeline/: test_pipeline.py
src/tests/infrastructure/processor/: test_stack.py
src/tests/integration/infrastructure/: test_stack.py
src/tests/unit/: conftest.py
src/tests/unit/infrastructure/: test_stack.py
src/tests/unit/infrastructure/pipeline/: test_pipeline.py
src/tests/unit/infrastructure/processor/: test_stack.py
src/tests/unit/pipeline/: test_pipeline.py
src/webapp/: .eslintrc.cjs  .gitignore  conf.py  index.html  index.rst  make.py  package-lock.json  package.json  vite.config.ts
src/webapp/public/: index.html  manifest.json
src/webapp/src/: .gitignore  App.js  App.jsx  aws-config.js  index.jsx  root.js
src/webapp/src/components/: authenticator.jsx  content.js  files.js  files.jsx  header.js  header.jsx  home-help.js  home.js  home.jsx  leaderboard.js  leaderboard.jsx  navigation.js  navigation.jsx  notifications.js  preview.jsx  sign-in-help.js  start.jsx  submissions.jsx  submit.js  submit.jsx  tools.js
