[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sneks*"]

[tool.setuptools.dynamic]
version = {file = ["VERSION.txt"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
gui = {file = ["requirements-gui.txt"]}
record = {file = ["requirements-record.txt"]}

[project]
name = "sneks"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Sneks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache Software License"}
authors = [
    {name = "Nathaniel Schaaf", email = "nathaniel.schaaf@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.scripts]
cdk-app = "sneks.infrastructure.app:main"
validate = "sneks.application.engine.validator.main:main"
run = "sneks.application.engine.engine.runner:main"
poster = "sneks.application.engine.gui.poster:main"

[tool.black]
extend-exclude = "src/webapp"

[tool.isort]
profile = "black"
known_first_party = "sneks"
skip_glob = ["src/webapp"]
