[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "webapp*",
    "tests*",
# When distributing, delete the .egg-info and uncomment the following
#    "sneks.backend*",
#    "sneks.infrastructure*",
]
namespaces = false

[tool.setuptools.dynamic]
version = {file = ["VERSION.txt"]}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements-dev.txt"]}
record = {file = ["requirements-record.txt"]}
infra = {file = ["requirements-infra.txt"]}

[project]
name = "toroidal-sneks"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Sneks on a Toroidal Plane"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache Software License"}
authors = [
    {name = "Nathaniel Schaaf", email = "nathaniel.schaaf@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.scripts]
cdk-app = "sneks.infrastructure.app:main"
validate = "sneks.engine.validator.main:main"
run = "sneks.engine.engine.runner:main"
demo = "sneks.engine.engine.runner:demo"
poster = "sneks.engine.gui.poster:main"

[tool.ruff]
exclude = [
    "src/webapp",
]
src = ["src"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
